# rules_terraform

./: BUILD.bazel  LICENSE  MODULE.bazel  go.mod  go.sum
cmd/atlantisbzl/: BUILD.bazel  README.md  cmd_local.go  cmd_repo.go  cmd_run.go  container.test.yaml  main.go
internal/: backend.bzl  modules.bzl
internal/starlark/: BUILD.bazel
pkg/atlantis/: BUILD.bazel  multienv.go  repo.go
pkg/bazel/: BUILD.bazel  bazel.go  bazel_test.go
pkg/ctxlog/: BUILD.bazel  hander.go
pkg/terraform/: BUILD.bazel  backend.go  backend_test.go  providers.go  run.go
pkg/terraform/bazel/: BUILD.bazel  provider.go  root_module.go  root_module_test.go  workspace.go
pkg/vault/: BUILD.bazel  client.go  fake_client.go
