module(
    name = "rules_terraform",
    version = "0.1.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")

# ========================================================================
# Go Lang
# ========================================================================
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.gazelle_override(
    directives = [
        "gazelle:proto disable_global",
    ],
    path = "github.com/spiffe/go-spiffe/v2",
)
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_alecthomas_kong",
    "com_github_hashicorp_vault_api",
    "com_github_hashicorp_vault_api_auth_kubernetes",
    "com_github_spiffe_go_spiffe_v2",
    "in_gopkg_yaml_v3",
    "net_starlark_go",
)
