load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "bazel",
    srcs = [
        "provider.go",
        "root_module.go",
        "workspace.go",
    ],
    importpath = "github.com/ohno-cloud/rules_terraform/pkg/terraform/bazel",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/bazel",
        "//pkg/terraform",
    ],
)

go_test(
    name = "bazel_test",
    srcs = ["root_module_test.go"],
    embed = [":bazel"],
    deps = ["//pkg/bazel"],
)
